--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,9 @@
 <link rel="stylesheet" href="bs-stepper.min.css">
 
 
+
+<!-- tailwind -->
+
   <!-- navbar -->
   <link rel="shortcut icon" href="images/fav-icon.png" />
   <title>Toneita</title>
@@ -89,7 +92,16 @@
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-
 <script src="bs-stepper.min.js"></script>
+
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+       
+      }
+    }
+  }
+</script>
 </body>
 </html>
